# prokuroBackend

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bom_harvest.py.save  clippy.toml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
corpus/: README.md  synonyms.toml
corpus/expected/: co60-keyboard-bom.json  mmdvm-hs-hat-bom.json  multisheet-01.json  openxenium-bom.json  rpi-cm5io-bom.json  signpost-backplane-bom.json  speeduino-bom.json  ugly-01.json  xmas-icetube-bom.json
corpus/raw/: 05-083749-01-b-eval-adema127-bom.csv  AD9574_evaluation_board_BOM.csv  BOM_05-050322-01-c.csv  Bill of Materials.csv  FFA Project Summaries 2023.csv  July2024_MicrosoftCloudforSustainability_datamodel.csv  ad916-1-2-3-4-fmcc-ebz-revd-bom.csv  ad9576-evb-bom-05_040335-b.csv  adf4030_evb_bom.csv  adf4030_interposer_bom.csv  adsp21835w-ev-som-bom.csv  bom_terra.csv  ev-21562-auto-bom.csv  ev-sc598-som-bom.csv  eval-ad9744-bom.csv  eval-adaq7767-1-bom.csv  eval-adis-fx3-bom.csv  ml_hardware.csv  multisheet-01.xlsx  rpi-cm5io-bom.csv  ugly-01.csv
corpus/raw/batch/raw/: boardsmith-bom.csv  easyduino-bom.csv  easyduino-easyduino_esp32s3_bom.csv  vcortex-hardware-bom_stock_report.csv  vcortex-hardware-bom_stock_report_final.csv  vcortex-hardware-vcortex_bom.csv
corpus/reports/: latest.md
crates/prokuroEnrichment/: Cargo.toml  RUNBOOK.md
crates/prokuroEnrichment/migrations/: 001_part_cache.sql
crates/prokuroEnrichment/src/: cache.rs  lib.rs  main.rs  metrics.rs  store.rs  store_item.rs  sync.rs  types.rs  worker.rs
crates/prokuroEnrichment/src/nexar/: auth.rs  client.rs
crates/prokuroEnrichment/src/nexar/fixtures/: multimatch_hit.json  multimatch_miss.json
crates/prokuroEnrichment/src/providers/: mod.rs
crates/prokuroEnrichment/src/providers/digikey/: dto.rs  mod.rs  provider.rs  rate_limit.rs
crates/prokuroEnrichment/tests/: integration.rs  unit.rs
crates/prokuroEnrichment/tests/fixtures/nexar/: multimatch_hit.json  multimatch_miss.json
crates/prokuroGateway/: Cargo.toml
crates/prokuroGateway/src/: analyze.rs  auth.rs  lib.rs  main.rs  state.rs
crates/prokuroGateway/src/boms/: handlers.rs  mod.rs  store.rs  types.rs
crates/prokuroGateway/src/clients/: enrichment.rs  mod.rs  parser.rs  tariff.rs
crates/prokuroGateway/tests/: integration.rs
crates/prokuroParser/: Cargo.toml  README.md
crates/prokuroParser/src/: lib.rs  main.rs  pipeline.rs
crates/prokuroParser/src/detect/: header.rs  mod.rs  sheet.rs  synonyms.rs
crates/prokuroParser/src/ingest/: csv.rs  mod.rs  xlsx.rs
crates/prokuroParser/src/map/: columns.rs  mod.rs
crates/prokuroParser/src/normalize/: row.rs
crates/prokuroParser/tests/: integration_test.rs
crates/prokuroParser/tests/fixtures/: minimal.csv  minimal.xlsx
crates/prokuroTariff/: Cargo.toml  RUNBOOK.md
crates/prokuroTariff/data/: hts_electronics.json  section_301.json
crates/prokuroTariff/src/: classify.rs  data.rs  lib.rs  main.rs  tariff.rs  trade_programs.rs
crates/prokuroTariff/tests/: data_integrity.rs  integration.rs
crates/prokuroTypes/: Cargo.toml
crates/prokuroTypes/src/: enrichment.rs  lib.rs  pagination.rs
docker/: enrichment.Dockerfile  gateway.Dockerfile  parser.Dockerfile  tariff.Dockerfile
prokuroWeb/: package.json
prokuroWeb-test-ui/: next.config.ts  package-lock.json  tailwind.config.ts  tsconfig.tsbuildinfo
prokuroWeb-test-ui/components/: AnalyzerPage.tsx  BomTable.tsx  DropZone.tsx  StatusBadge.tsx  SummaryCards.tsx
prokuroWeb-test-ui/lib/: types.ts
prokuroWeb/app/: globals.css  layout.tsx  page.tsx
prokuroWeb/components/: NavBar.tsx
prokuroWeb/lib/: api.ts
schemas/: README.md
schemas/openapi/: gateway.yaml
scripts/: test-analyze.sh  test-parse.sh
scripts/scraping/: bom_harvest.py  bom_harvest_bill_only.py
