[workspace]
resolver = "2"
members = [
    "crates/prokuroTypes",
    "crates/prokuroParser",
    "crates/prokuroEnrichment",
    "crates/prokuroGateway",
    "crates/prokuroTariff",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/prokuro-ai/prokuroBackend"
