[package]
name = "prokuro-enrichment"
description = "Nexar/Octopart enrichment: lifecycle, stock, lead time"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prokuro-enrichment"
path = "src/main.rs"

[dependencies]
axum = { version = "*", features = ["multipart"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["trace"] }

[dev-dependencies]
tower = "*"
