[package]
name = "prokuro-enrichment"
description = "Part enrichment: lifecycle, stock, lead time, HTS codes via Digi-Key + DynamoDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prokuro-enrichment"
path = "src/main.rs"

[dependencies]
prokuro-types = { path = "../prokuroTypes" }
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "form"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
async-trait = "0.1"
aws-config = "1"
aws-sdk-dynamodb = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
