[package]
name = "prokuro-gateway"
description = "Public BFF: POST /v1/analyze, flywheel logging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prokuro-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "*", features = ["multipart"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json", "multipart"] }
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["trace"] }
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
tower = "*"
