[package]
name = "prokuro-gateway"
description = "Public BFF: POST /v1/analyze, BOM persistence, flywheel logging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prokuro-gateway"
path = "src/main.rs"

[dependencies]
prokuro-types = { path = "../prokuroTypes" }
axum = { version = "*", features = ["multipart"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json", "multipart"] }
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["trace", "cors"] }
uuid = { version = "*", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jsonwebtoken = "9"
aws-config = "1"
aws-sdk-s3 = "1"

[dev-dependencies]
tower = "*"
tempfile = "3"
