[package]
name = "prokuro-parser"
description = "BOM ingestion: CSV/XLSX parse, column mapping, canonical rows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prokuro-parser"
path = "src/main.rs"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
calamine = "*"
csv = "*"
strsim = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["trace"] }
