[package]
name = "prokuro-parser"
description = "BOM ingestion: CSV/XLSX parse, column mapping, canonical rows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prokuro-parser"
path = "src/main.rs"

[[bin]]
name = "corpus-runner"
path = "src/bin/corpus_runner.rs"

[dependencies]
axum = { version = "*", features = ["multipart"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
calamine = "*"
csv = "*"
strsim = "*"
thiserror = "*"
toml = "*"
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["trace"] }
